@@ -7,6 +7,7 @@ import io.quarkus.test.junit.QuarkusTest;
 import org.bson.json.JsonParseException;
 import org.finos.calm.domain.Architecture;
 import org.finos.calm.domain.architecture.ArchitectureRequest;
+import org.finos.calm.domain.architecture.NamespaceArchitectureSummary;
 import org.finos.calm.domain.exception.ArchitectureNotFoundException;
 import org.finos.calm.domain.exception.ArchitectureVersionExistsException;
 import org.finos.calm.domain.exception.ArchitectureVersionNotFoundException;
@@ -70,14 +71,23 @@ public class TestArchitectureResourceShould {
 
     @Test
     void return_list_of_architecture_ids_when_valid_namespace_provided_on_get_architectures() throws NamespaceNotFoundException {
-        when(mockArchitectureStore.getArchitecturesForNamespace(anyString())).thenReturn(Arrays.asList(12345, 54321));
+        List<NamespaceArchitectureSummary> summaries = List.of(
+                new NamespaceArchitectureSummary("Arch One", "First architecture", 12345),
+                new NamespaceArchitectureSummary("Arch Two", "Second architecture", 54321)
+        );
+        when(mockArchitectureStore.getArchitecturesForNamespace(anyString())).thenReturn(summaries);
 
         given()
                 .when()
                 .get("/calm/namespaces/finos/architectures")
                 .then()
                 .statusCode(200)
-                .body(equalTo("{\"values\":[12345,54321]}"));
+                .body("values[0].name", equalTo("Arch One"))
+                .body("values[0].description", equalTo("First architecture"))
+                .body("values[0].id", equalTo(12345))
+                .body("values[1].name", equalTo("Arch Two"))
+                .body("values[1].description", equalTo("Second architecture"))
+                .body("values[1].id", equalTo(54321));
 
         verify(mockArchitectureStore, times(1)).getArchitecturesForNamespace("finos");
     }
